--- a/matematica/modulo02/Exercicios02.ipynb
+++ b/matematica/modulo02/Exercicios02.ipynb
@@ -93,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Os valores de x e y nas equações acima são, respectivamente: -24.0 29.5\n"
+      "Os valores de x e y nas equações acima são, respectivamente: 23.0 12.0\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
     "# Solução\n",
     "import numpy as np\n",
     "\n",
-    "A = np.array([ [1,2], [1,4] ])\n",
+    "A = np.array([ [1,1], [2,4] ])\n",
     "b = np.array([35,94])\n",
     "\n",
     "x, y = np.linalg.solve(A,b)\n",
@@ -373,13 +373,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Os valores de x e y nas equações acima são, respectivamente: -20.0 5.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
-    "x = 10\n",
-    "y = 5"
+    "#5 = m5 + b\n",
+    "#10 = m6 + b\n",
+    "\n",
+    "# Solução\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([ [1,5], [1,6] ])\n",
+    "b = np.array([5,10])\n",
+    "\n",
+    "x, y = np.linalg.solve(A,b)\n",
+    "print(\"Os valores de x e y nas equações acima são, respectivamente:\", x, y)"
    ]
   },
   {
@@ -409,13 +426,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
     "\n",
-    "# Novo valor de x\n"
+    "# Novo valor de x\n",
+    "b =-20\n",
+    "m =5\n",
+    "\n",
+    "y = m*7 + 5\n",
+    "print(y)"
    ]
   },
   {
