Finalização do conteudo de matematica

--- a/matematica/modulo02/Exercicios02-Solutions.ipynb
+++ b/matematica/modulo02/Exercicios02-Solutions.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -143,9 +143,9 @@
       "Vou resolver a equação quadrática ax^2 + bx + c = 0. Digite os valores de a, b e c:\n",
       "\n",
       "a = 1\n",
-      "b = 9\n",
-      "c = 8\n",
-      "A equação tem duas soluções:  -1.0 or -8.0\n"
+      "b = -45\n",
+      "c = -23\n",
+      "A equação tem duas soluções:  45.505434140654685 or -0.5054341406546818\n"
      ]
     }
    ],
@@ -620,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
